crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_explicit_relative_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_explicit_relative_import/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message = "Hello"
greetings = types.SimpleNamespace()
greetings.greeting = types.SimpleNamespace(__all__=['message'])
print(greeting_greetings.message)
