crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_explicit_relative_import_in_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo
