crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_script_using_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_script_using_module_in_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import types
message = "Hello"
greetings = types.SimpleNamespace()
greetings.greeting = types.SimpleNamespace()
greetings.greeting.__all__ = ['message']
greetings.greeting.message = message
print(greeting_greetings_greeting.message)
