crates/cribo/tests/snapshots/bundled_code@xfail_stickytape_script_using_stdlib_module_in_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_stickytape_script_using_stdlib_module_in_package/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo
